# documentRecognitionT1

./: .gitignore  LICENSE  README.md  classificator_train.ipynb  easyocr_test_no_train.ipynb  main.ipynb  pyproject.toml
