[tool.poetry]
name = "documentrecognitiont1"
version = "0.1.0"
description = ""
authors = ["mrtsstlrs <pumpsulp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "<2.1.0"
jupyter = "^1.1.1"
opencv-python = "^4.10.0.84"
torch = "^2.5.0"
torchvision = "^0.20.0"
scipy = "^1.14.1"
pillow = "^11.0.0"
scikit-image = "^0.24.0"
python-bidi = "^0.6.3"
pyyaml = "^6.0.2"
shapely = "^2.0.6"
pyclipper = "^1.3.0.post6"
ninja = "^1.11.1.1"
pandas = "^2.2.3"
utils = "^1.0.2"
natsort = "^8.4.0"
tensorflow = "^2.18.0"
easyocr = "^1.7.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
